# FastAPI

./: .gitignore  README.md  demo_auth.py  items_views.py  main.py  pyproject.toml  requirements.txt  script.py  test.db  test.ipynb
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
src/: __init__.py  config.py
src/books/: book_data.py  models.py  routes.py  schemas.py
src/db/: main.py
users/: crud.py  schemas.py  views.py
